Refactor execution mode handling by introducing ExecutionModeUtils for improved command line argument management