@@ -23,8 +23,6 @@ import org.apache.commons.cli.CommandLine;
 import org.apache.commons.cli.Option;
 import org.apache.commons.cli.Options;
 import org.evosuite.*;
-import org.evosuite.classpath.ClassPathHacker;
-import org.evosuite.classpath.ClassPathHandler;
 import org.evosuite.classpath.ResourceList;
 import org.evosuite.instrumentation.BytecodeInstrumentation;
 import org.evosuite.rmi.MasterServices;
@@ -36,8 +34,6 @@ import org.evosuite.utils.LoggingUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.File;
-import java.io.IOException;
 import java.rmi.RemoteException;
 import java.util.ArrayList;
 import java.util.List;
@@ -97,82 +93,47 @@ public class MeasureCoverage {
 
     private static void measureCoverage(String targetClass, List<String> args) {
 
-        String classPath = ClassPathHandler.getInstance().getEvoSuiteClassPath();
-        String projectCP = ClassPathHandler.getInstance().getTargetProjectClasspath();
+        ExecutionModeUtils.ClasspathInfo classpathInfo = ExecutionModeUtils.getClasspathInfo();
+        String classPath = classpathInfo.combinedClasspath;
+        String projectCP = classpathInfo.projectClasspath;
 
-        classPath += !classPath.isEmpty() ? File.pathSeparator + projectCP : projectCP;
-
-        ExternalProcessGroupHandler handler = new ExternalProcessGroupHandler();
-        int port = handler.openServer();
+        ExternalProcessGroupHandler handler = ExecutionModeUtils.createSingleClientHandler();
+        int port = ExecutionModeUtils.openServer(handler);
         List<String> cmdLine = new ArrayList<>();
         cmdLine.add(JavaExecCmdUtil.getJavaBinExecutablePath(true)/*EvoSuite.JAVA_CMD*/);
         cmdLine.add("-cp");
         cmdLine.add(classPath);
-        cmdLine.add("-Dprocess_communication_port=" + port);
+        ExecutionModeUtils.addProcessCommunicationPort(cmdLine, port);
         if (Properties.HEADLESS_MODE) {
-            cmdLine.add("-Djava.awt.headless=true");
+            ExecutionModeUtils.addHeadlessMode(cmdLine);
         }
-        cmdLine.add("-Dlogback.configurationFile=" + LoggingUtils.getLogbackFileName());
-        cmdLine.add("-Djava.library.path=lib");
-        // Add module access flags needed for XStream serialization (Java 9+)
-        cmdLine.add("--add-opens");
-        cmdLine.add("java.base/java.util=ALL-UNNAMED");
-        cmdLine.add("--add-opens");
-        cmdLine.add("java.base/java.lang=ALL-UNNAMED");
-        // Add module access flags needed for VirtualNetwork (Java 9+)
-        cmdLine.add("--add-opens");
-        cmdLine.add("java.base/java.net=ALL-UNNAMED");
-        cmdLine.add(projectCP.isEmpty() ? "-DCP=" + classPath : "-DCP=" + projectCP);
+        ExecutionModeUtils.addLogbackConfiguration(cmdLine);
+        ExecutionModeUtils.addJavaLibraryPath(cmdLine);
+        ExecutionModeUtils.addCommonModuleOpens(cmdLine);
+        ExecutionModeUtils.addCpProperty(cmdLine, projectCP.isEmpty() ? classPath : projectCP);
 
-        for (String arg : args) {
-            if (!arg.startsWith("-DCP=")) {
-                cmdLine.add(arg);
-            }
-        }
+        ExecutionModeUtils.addArgsExcludingCpProperty(cmdLine, args);
 
-        cmdLine.add("-DTARGET_CLASS=" + targetClass);
+        ExecutionModeUtils.addTargetClassProperty(cmdLine, targetClass);
         cmdLine.add("-Djunit=" + Properties.JUNIT);
-        if (Properties.PROJECT_PREFIX != null) {
-            cmdLine.add("-DPROJECT_PREFIX=" + Properties.PROJECT_PREFIX);
-        }
-
-        cmdLine.add("-Dclassloader=true");
-        cmdLine.add(ClientProcess.class.getName());
+        ExecutionModeUtils.addProjectPrefixPropertyIfPresent(cmdLine);
+        ExecutionModeUtils.addClassloaderProperty(cmdLine);
+        ExecutionModeUtils.addClientMainClass(cmdLine);
 
         /*
          * TODO: here we start the client with several properties that are set through -D. These properties are not
          * visible to the master process (ie this process), when we access the Properties file. At the moment, we only
          * need few parameters, so we can hack them
          */
-        Properties.getInstance();// should force the load, just to be sure
-        Properties.TARGET_CLASS = targetClass;
-        Properties.PROCESS_COMMUNICATION_PORT = port;
+        ExecutionModeUtils.applyClientProperties(targetClass, port);
 
-        LoggingUtils logUtils = new LoggingUtils();
-
-        if (!Properties.CLIENT_ON_THREAD) {
-            /*
-             * We want to completely mute the SUT. So, we block all outputs from client, and use a remote logging
-             */
-            boolean logServerStarted = logUtils.startLogServer();
-            if (!logServerStarted) {
-                logger.error("Cannot start the log server");
-                return;
-            }
-            int logPort = logUtils.getLogServerPort(); //
-            cmdLine.add(1, "-Dmaster_log_port=" + logPort);
-            cmdLine.add(1, "-Devosuite.log.appender=CLIENT");
+        LoggingUtils logUtils = ExecutionModeUtils.configureRemoteLoggingIfNeeded(cmdLine, logger);
+        if (!Properties.CLIENT_ON_THREAD && logUtils == null) {
+            return;
         }
 
         String[] newArgs = cmdLine.toArray(new String[cmdLine.size()]);
-        for (String entry : ClassPathHandler.getInstance().getClassPathElementsForTargetProject()) {
-            try {
-                ClassPathHacker.addFile(entry);
-            } catch (IOException e) {
-                LoggingUtils.getEvoLogger().info("* Error while adding classpath entry: "
-                        + entry);
-            }
-        }
+        ExecutionModeUtils.addTargetProjectClasspathElementsToSystem();
 
         handler.setBaseDir(EvoSuite.base_dir_path);
         if (handler.startProcess(newArgs)) {
@@ -224,7 +185,7 @@ public class MeasureCoverage {
 
         handler.closeServer();
 
-        if (!Properties.CLIENT_ON_THREAD) {
+        if (logUtils != null) {
             try {
                 Thread.sleep(100);
             } catch (InterruptedException e) {
